--- a/style.css
+++ b/style.css
@@ -390,3 +390,68 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-top: 1px;
   margin-left: 74vw;
 }
+.img2{
+  margin-left: 23vw;
+  margin-top: 10px;
+}
+
+.shop1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left:40vw;
+    margin-top: -2vw;
+    font-size: 20px;
+
+}
+
+.shop22{
+    margin-left: 45vw;
+    margin-top: -27px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.shop3{
+    margin-left: 50vw;
+    margin-top: -25px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.shop4{
+    margin-left: 57.60vw;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: -27px;
+}
+.img10{
+  margin-left: 23vw;
+}
+.img20 img{
+margin-top: -13.50vw;
+margin-left: 65vW;
+position: absolute;
+}
+.hide{
+  margin-left: 10px;
+}
+.hides{
+  margin-left: 67.50vw;
+  margin-top:-13.60vw;
+  position: absolute;
+  display: flex;
+  gap: 13px;
+  height: 23px;
+}
+.home2{
+  margin-left: 40vw;
+  margin-top:-8vw ;
+  position: absolute;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+}
+.home4{
+  margin-left: 48vw;
+  position: absolute;
+  margin-top: -7vw;
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color:#B88E2F;
+}
